Various build fixes. Ensure --enable-pic configure option is set when building the python Extension. Build all libraries before building the Python extension. Fix for non-standard Python installation.

--- a/config/config.auto.in
+++ b/config/config.auto.in
@@ -5,5 +5,8 @@ CL=@CC@
 CCFLAGS_NO_C=@CCFLAGS_NO_C@
 CCFLAGS=$(CCFLAGS_NO_C) -c
 CLFLAGS=-L. -L$(LIBDIR) @LDCCFLAGS@ -lm
-
+DEBUG_CFLAGS=@DEBUG_CFLAGS@
+MPI_CFLAGS=@MPI_CFLAGS@
+OPENMP_CFLAGS=@OPENMP_CFLAGS@
+PIC_CFLAGS=@PIC_CFLAGS@
 ARCREATE=@ARCREATE@
