--- a/configure.ac
+++ b/configure.ac
@@ -82,19 +82,19 @@ case $system in
     ;;
 esac
 
-CCFLAGS="$CCFLAGS $OPENMP_CFLAGS"
-
 if test $ENABLE_DEBUG = yes; then
-  CCFLAGS="$CCFLAGS -g"
+  DEBUG_CFLAGS="-g"
 fi
 
 if test $ENABLE_PIC = yes; then
-  CCFLAGS="$CCFLAGS -fPIC"
+  PIC_CFLAGS="-fPIC"
 fi
 
 if test $ENABLE_MPI = yes; then
-  CCFLAGS="$CCFLAGS -DUSE_MPI"
+  MPI_CFLAGS="-DUSE_MPI"
 fi
+
+CCFLAGS="$CCFLAGS $DEBUG_CFLAGS $OPENMP_CFLAGS $PIC_CFLAGS $MPI_CFLAGS"
 
 CCFLAGS_NO_C="$CCFLAGS $CPPFLAGS"
 
@@ -104,6 +104,10 @@ AC_SUBST(SILENT_RULE)
 AC_SUBST(CC)
 AC_SUBST(CCFLAGS_NO_C)
 AC_SUBST(LDCCFLAGS)
+AC_SUBST(DEBUG_CFLAGS)
+AC_SUBST(MPI_CFLAGS)
+AC_SUBST(OPENMP_CFLAGS)
+AC_SUBST(PIC_CFLAGS)
 AC_SUBST(ARCREATE)
 
 AC_OUTPUT(config/config.auto)
