Merges from MPA repository:
- c_utils/trig_utils.*:
  efficient twiddle factor computation for FFTs or rotations in harmonic
  domain
- use new twiddle factors in libfftpack and libsharp
- libfftpack/ls_fft.*: better encapsulation of the "plan" types
- c_utils/walltime_c.c: support for Windows
- libsharp/sharp_core_inc.c: accelerated mypow() function
- libsharp/sharp_cxx.h: add support for std::complex arrays
- libsharp/sharp_testsuite.c: fix a bug in the RNG
  (it relied on undefined integer overflow semantics)
- libsharp/sharp_vecutil.h: add support for FMA3
- libsharp/sharp_vecsupport.h: add support for logical OR
- libsharp/sharp_complex_hacks.h: add function for a special case of
  vhsum_cmplx2()

--- a/configure.ac
+++ b/configure.ac
@@ -56,8 +56,12 @@ case $CCTYPE in
     changequote(,)
     gcc43=`echo $GCCVERSION | grep -c '^4\.[3456789]'`
     gcc44=`echo $GCCVERSION | grep -c '^4\.4'`
+    gcc5plus=`echo $GCCVERSION | grep -c '^[56789]\.'`
     changequote([,])
     if test $gcc43 -gt 0; then
+      CCFLAGS="$CCFLAGS -march=native"
+    fi
+    if test $gcc5plus -gt 0; then
       CCFLAGS="$CCFLAGS -march=native"
     fi
     if test $gcc44 -gt 0; then
